# dsd-ros-msg-definitions-oss

./: .gitignore  .pre-commit-config.yaml  README.md
dsd_ros_messages/: CMakeLists.txt  package.xml
dsd_ros_messages/msg/: CoupledLocalization.msg  CoupledLocalizationStamped.msg  CoupledLocalizationTupel.msg  CoupledLocalizationTupelStamped.msg  EgoMotion.msg  EgoMotionPath.msg  EgoMotionPathStamped.msg  EgoMotionStamped.msg  GNSSLocalization.msg  GNSSLocalizationStamped.msg  IMU.msg  IMUStamped.msg  MapMatchedLocalization.msg  MapMatchedLocalizationStamped.msg  MapMatchedLocalizationTupel.msg  MapMatchedLocalizationTupelStamped.msg  Objects.msg  ObjectsStamped.msg  Odometry.msg  OdometryStamped.msg  RailHorizon.msg  RailHorizonStamped.msg  SensorInformation.msg  SensorInformationStamped.msg  StaticObjects.msg  StaticObjectsStamped.msg
dsd_ros_messages/msg/mission_control/: ApplicationConfiguration.msg  ApplicationConfigurationStamped.msg  ApplicationStatus.msg  ApplicationStatusStamped.msg  ApplicationVersion.msg  ApplicationVersionStamped.msg  MissionProfile.msg  MissionProfileStamped.msg
dsd_ros_messages/msg/sub_msg/: Covariance.msg  FieldOfView.msg  ID.msg  KeyValueMap.msg  KeyValuePair.msg  LocalizationIntegrity.msg  MapMatchingIntegrity.msg  Object.msg  ObjectBase.msg  ObjectClassification.msg  ObjectTracking.msg  Orientation.msg  Position.msg  Probability.msg  RailHorizonData.msg  SensorInformationEntry.msg  SensorIntegrity.msg  Shape.msg  Topology.msg  Track.msg  TrackPoint.msg  Variance.msg
dsd_ros_messages/msg/types/: ApplicationModeTypes.msg  ApplicationStatusTypes.msg  LocalizationIntegrityTypes.msg  MapMatchingIntegrityTypes.msg  MapMatchingOrientationTypes.msg  ObjectTypes.msg  SensorIntegrityType.msg  SensorTypes.msg  ShapeParameterIndices.msg  ShapeTypes.msg  TrackTypes.msg
